[package]
name = "repo-tools"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.3"
clap = { version = "3.1.18", features = ["cargo"] }
flate2 = "1.0.24"
tar = "0.4.38"
log = { version = "0.4.17", features = ["std"] }
globset = "0.4.8"

