[package]
name = "repo-tools"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["cargo", "env"] }
flate2 = "1.0.24"
globset = "0.4.8"
gpgme = "0.10.0"
hex = "0.4.3"
log = { version = "0.4.17", features = ["std"] }
openssl = "0.10.40"
tar = "0.4.38"
termcolor = "1.1.3"

